fix issue where day names were being cut off

--- a/styles/components/events-calendar/time-grid.scss
+++ b/styles/components/events-calendar/time-grid.scss
@@ -33,6 +33,7 @@
     width: 100%;
     height: 100%;
     position: relative;
+    display: none;
   }
   .rbc-allday-cell + .rbc-allday-cell {
     border-left: 1px solid $cell-border;
@@ -45,7 +46,7 @@
 
   .rbc-row {
     box-sizing: border-box;
-    min-height: 20px;
+    min-height: 30px;
   }
 }
 
@@ -71,13 +72,13 @@
     border-bottom: 1px solid $cell-border;
   }
 
-  // .rbc-gutter-cell {
-  //   flex: none;
-  // }
+  .rbc-gutter-cell {
+    flex: none;
+  }
 
-  // > .rbc-gutter-cell + * {
-  //   width: 100%;
-  // }
+  > .rbc-gutter-cell + * {
+    width: 100%;
+  }
 }
 
 .rbc-time-header-cell-single-day {
